--- a/railway.toml
+++ b/railway.toml
@@ -2,9 +2,9 @@
 builder = "dockerfile"
 
 [deploy]
-startCommand = "python start_server.py --host 0.0.0.0 --port $PORT --no-reload"
-healthcheckPath = "/health"
-healthcheckTimeout = 300
+startCommand = "uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
+healthcheckPath = "/"
+healthcheckTimeout = 600
 restartPolicyType = "on_failure"
 
 # Resource requirements for Playwright
@@ -14,4 +14,7 @@ cpu = "1000m"
 
 [env]
 PYTHONUNBUFFERED = "1"
-PYTHONPATH = "/app" 
+PYTHONPATH = "/app"
+# Playwright environment variables for production
+PLAYWRIGHT_BROWSERS_PATH = "/ms-playwright"
+PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD = "false" 
