--- a/railway.toml
+++ b/railway.toml
@@ -2,9 +2,9 @@
 builder = "dockerfile"
 
 [deploy]
-startCommand = "uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
-healthcheckPath = "/"
-healthcheckTimeout = 600
+startCommand = "uvicorn backend.main:app --host 0.0.0.0 --port $PORT --log-level info"
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 
 # Resource requirements for Playwright
