--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ aiofiles==24.1.0
 python-multipart==0.0.17
 requests==2.32.3
 aiohttp==3.11.11
-nest-asyncio==1.6.0 
+nest-asyncio==1.6.0
+Faker==28.4.1 
